[package]
name = "websocket-lowlevel"
version = "0.22.4"
authors = ["cyderize <admin@cyderize.org>", "Michael Eden <themichaeleden@gmail.com>"]

description = "A WebSocket (RFC6455) library for Rust: low-level component. It contains HTTP-independent aspect of WebSockets"

documentation = "https://docs.rs/websocket-lowlevel/"
repository = "https://github.com/websockets-rs/rust-websocket"

keywords = ["websocket", "websockets", "rfc6455", "async", "tokio"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::websocket"]

license = "MIT"

edition = "2018"


[dependencies]
byteorder = "1.0"
rand = "0.6.1"
bitflags = "1.0.4"
base64 = "0.10.0"
sha1 = "0.6"
bytes = { version = "0.4", optional = true }
futures-preview = { version = "0.3.0-alpha.19", optional = true }
native-tls = { version = "0.2.1", optional = true }
tokio = { git = "https://github.com/tokio-rs/tokio.git", optional = true }
tokio-tls = { git = "https://github.com/tokio-rs/tokio.git", optional = true }
tokio-util = { git = "https://github.com/tokio-rs/tokio.git", optional = true }

[dev-dependencies.tokio]
default-features = false
git = "https://github.com/tokio-rs/tokio.git"
features = ["io", "tcp", "rt-full"]

[features]
default = ["sync", "async", "sync-ssl", "async-ssl"]
sync = []
sync-ssl = ["native-tls", "sync"]
async = ["tokio", "tokio-util", "bytes", "futures-preview"]
async-ssl = ["native-tls", "tokio-tls", "async"]
